Fixed overflow in grid system

--- a/css/grid.css
+++ b/css/grid.css
@@ -4,14 +4,14 @@
 .col-7, .col-8, .col-9, .col-10, .col-11 {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    overflow: auto;
+    overflow: none;
 }
 
 .container {
 	width: 80%;
 	margin: 0 auto;
 	clear: both;
-	overflow: auto;
+	overflow: none;
 }
 
 .row {
